--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "ng build --configuration production --base-href /thomas-skomra/ && npx angular-cli-ghpages --dir=dist/client/browser"
   },
   "private": true,
   "dependencies": {
