--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng build --configuration production --base-href /thomas-skomra/ && npx angular-cli-ghpages --dir=dist/client/browser"
+    "deploy": "ng build --configuration production && npx angular-cli-ghpages --dir=dist/client/browser"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +21,8 @@
     "@ngx-translate/http-loader": "^16.0.1",
     "@primeng/themes": "^19.1.3",
     "@tailwindcss/postcss": "^4.1.10",
+    "autoprefixer": "^10.4.21",
+    "material-icons": "^1.13.14",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
